--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=schedule-management-jpa
+
+# MySQL ?????? ??
+spring.datasource.url=jdbc:mysql://localhost:3306/schedule_management
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Hibernate Dialect ??
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+
+
