--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,5 @@ spring.jpa.show-sql=true
 # Hibernate Dialect ??
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
-
-
+# JWT ??
+jwt.secret.key=your-base64-encoded-secret-key  # Base64? ???? Secret Key
